Work update. Fix back arrow alignment in galleries.

--- a/assets/css/_galleries.scss
+++ b/assets/css/_galleries.scss
@@ -127,7 +127,6 @@
   color: $alt;
   text-decoration: none;
   position: relative;
-  left: 50px;
 }
 
 .gallery-section {
